@@ -1,3 +1,10 @@
+Wed Apr 12 19:31:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* API change - added a termfreq member to OmDocumentTerm.
+
+	* SleepyDatabase now adds entries to postlists and termlists.  Doesn't
+	  yet store documents, or correct already existing wdfs in termlists.
+
 Wed Apr 12 17:36:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Added internal test to check that SleepyList packs and unpacks
